# lembas-cli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  codecov.yml  pixi.toml  renovate.json
.github/workflows/: auto-label.yml  auto-release.yml  ci.yml  lint-pr-title.yml  pages.yml  pre-commit.yml  release.yml
locks/: pixi.toml
scripts/: install.sh  sign-binary.py
src/: cli.rs  install.rs  main.rs  paths.rs  runtime.rs  update.rs
src/signing_keys/: key1.pub  key2.pub
