[package]
name = "lembas-cli"
version = "0.3.1"
edition = "2024"
description = "Self-bootstrapping CLI for lembas lifecycle engineering analysis"
license = "MIT"
repository = "https://github.com/lembas-project/lembas-cli"
readme = "README.md"

[[bin]]
name = "lembas"
path = "src/main.rs"

[dependencies]

[dev-dependencies]

[profile.release]
lto = true
strip = true
opt-level = "z"
