[package]
name = "lembas-cli"
version = "0.3.1"
edition = "2024"
description = "Self-bootstrapping CLI for lembas lifecycle engineering analysis"
license = "MIT"
repository = "https://github.com/lembas-project/lembas-cli"
readme = "README.md"

[[bin]]
name = "lembas"
path = "src/main.rs"

[dependencies]
dirs = "6"
miette = { version = "7", features = ["fancy"] }
rattler = { version = "0.46", default-features = false, features = ["native-tls", "indicatif"] }
rattler_cache = "0.10"
rattler_conda_types = "0.47"
rattler_lock = "0.31"
rattler_shell = "0.27"
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
