[package]
name = "lembas-cli"
version = "2026.7.0"
edition = "2024"
description = "Self-bootstrapping CLI for lembas lifecycle engineering analysis"
license = "MIT"
repository = "https://github.com/lembas-project/lembas-cli"
readme = "README.md"

[[bin]]
name = "lembas"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
ed25519-dalek = "2"
futures-util = "0.3"
indicatif = "0.18"
miette = { version = "7", features = ["fancy"] }
rattler = { version = "0.47", default-features = false, features = ["native-tls", "indicatif"] }
rattler_cache = "0.10"
rattler_conda_types = "0.48"
rattler_lock = "0.31"
rattler_shell = "0.27"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "stream", "json"] }
self-replace = "1.5"
semver = "1.0"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
